# health_tracker

./: .env.sample  .gitignore  README.md  docker-compose.yml  pyproject.toml
config/: celery.py  settings.py  urls.py
habits/: admin.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_pleasanthabit_options_and_more.py
users/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py
users/migrations/: 0001_initial.py  0002_user_telegram_chat_id.py
